Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25531

Cannot tell whether a valid position plugin was found and instantiated in QML API

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.0
    • 5.0.0
    • Location
    • None

    Description

      Currently there is no way to tell from QML whether a PositionSource element has found and instantiated a valid backend plugin (ie, whether ::createDefaultSource returned NULL or not). This is a major issue on some platforms that use this null return as an important indication of whether GPS is disabled / not available, and applications should be able to react to this state appropriately.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            alewilso Alex Wilson (closed Nokia identity) (Inactive)
            alewilso Alex Wilson (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes