Allow QML apps to tell if a valid positioning plugin was found

Task-number: QTBUG-25531
Change-Id: I29b99f4b828623ccb3dfedcecd31a6bfac0f5d9b
Reviewed-by: Aaron McCarthy <aaron.mccarthy@nokia.com>